2008-11-25  Larry Jones  <lawrence.jones@siemens.com>

	* Makefile.in: Regenerated with Autoconf 2.63.

2008-11-19  Larry Jones  <lawrence.jones@siemens.com>

	* entries.c (WriteTag): Remove any exiting file and recreate
	rather than trying to overwrite (to avoid permission problems).

	* sanity.sh (keyword-25): Protect keywords against accidental
	expansion in sanity.sh itself.

2008-11-18  Larry Jones  <lawrence.jones@siemens.com>

	* client.c (add_prune_candidate): Strip all trailing slashes.

	* client.c commit.c, history.c, logmsg.c, rcs.c, repos.c, tag.c,
	  update.c, vers_ts.c: Fix gcc -Wall warnings.

	* sanity.sh: Fix nonportable ``date +%s'' test.

2008-11-17  Larry Jones  <lawrence.jones@siemens.com>

	* rcs.c (findmagictag): Don't try to do arithmetic on void *.

2008-11-15  Larry Jones  <lawrence.jones@siemens.com>

	* find_names.c (Find_Directories): Use TRACE_NULL for repository.

2008-11-05  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (keyword-25): Fix merge from cvs 1.11.x problem.

	*diff.c (diff): Use SEND_FORCE on files when a -k option is used
	with diff to avoid client/server not finding the requested file.
	* sanity.sh (keyword): Add tests for this.

	* checkout.c (checkout): For multiroot checkout/update operations,
	do not assume that the static join_rev1 and join_rev2 strings will
	not be seen again with another repository.
	* update.c (update): Ditto.
	* commit.c (commit): For multiroot commits with -F logmessage
	do not generate "cannot specify both a message and a log file"
	errors. Track the use of -m as an argument explicitly.
	(finaladd): API change to pass the saved_message.
	(check_fileproc, commit_fileproc, commit_filesdoneproc): Pass the
	saved_message via the callerdat block.
	(commit_direntproc): Ditto.
	* sanity.sh (multiroot-{commit-2,update-join-{1,2},admin-{1,2,3,4}}):
	Do commits with -F logmessage to test above and also look at other
	broken behavior which needs to be fixed. There are some FIXME