@@ -209,8 +209,10 @@ start_recursion (FILEPROC fileproc, FILESDONEPROC filesdoneproc,
       "                      local=%d, which=%d, aflag=%d,\n"
       "                      locktype=%d, update_preload=%s\n"
       "                      dosrcs=%d, repository_in=%s)",
-	   TRACE_PTR (fileproc, 0), TRACE_PTR (filesdoneproc, 1),
-	   TRACE_PTR (direntproc, 2), TRACE_PTR (dirleaveproc, 3),
+	   TRACE_PTR ((void *)fileproc, 0),
+	   TRACE_PTR ((void *)filesdoneproc, 1),
+	   TRACE_PTR ((void *)direntproc, 2),
+	   TRACE_PTR ((void *)dirleaveproc, 3),
 	   TRACE_PTR (callerdat, 4), argc, TRACE_PTR (argv, 5),
 	   local, which, aflag, locktype,
 	   TRACE_NULL (update_preload), dosrcs,
